--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,8 +1,13 @@
 ---
-title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+layout: splash
+title: "Sorry, there was a problem"
+excerpt: "Page not found."
 sitemap: false
+header:
+  overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
+  caption: "Photo: [**Pexels**](https://www.pexels.com/photo/abstract-art-blur-bright-373543/)"
+  overlay_image: assets/images/pexels-photo-373543.jpeg
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+Sorry, but the page you were trying to view does not exist. 
