--- a/_pages/404.md
+++ b/_pages/404.md
@@ -10,4 +10,4 @@ header:
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist. 
+<div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/nVTa8D8zJUc2A" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/nVTa8D8zJUc2A">via GIPHY</a></p>
