changed location of post files for testpost

--- a/_posts/2020-05-19-testpost.md
+++ b/_posts/2020-05-19-testpost.md
@@ -39,7 +39,7 @@ summary(cars)
 
 You can also embed plots, for example:
 
-![](/posts/2020-05-19-testpost_files/figure-gfm/pressure-1.png)<!-- -->
+![GGPLOT Output](assets/posts/2020-05-19-testpost_files/figure-gfm/pressure-1.png)<!-- -->
 
 Note that the `echo = FALSE` parameter was added to the code chunk to
 prevent printing of the R code that generated the plot.
