Added notes on howto transfer

--- a/_posts/2020-05-19-testpost.md
+++ b/_posts/2020-05-19-testpost.md
@@ -43,3 +43,12 @@ You can also embed plots, for example:
 
 Note that the `echo = FALSE` parameter was added to the code chunk to
 prevent printing of the R code that generated the plot.
+
+
+## Notes on Workflow from R Markdown to Post
+
+0. Name your .Rmd according to your post name here : `2020-05-19-testpost.md`
+1. knit your .Rmd to rmarkdown::github_document 
+2. Upload the resulting 2020-05-19-testpost.md and its files into github. The md goes into *_posts* the files folder goes into *assets/posts/*.
+3. Change the yaml header of 2020-05-19-testpost.md according to our standards and change the paths in the .md into `newpath=/assets/posts/oldpath`.
+4. Done
