--- a/_posts/2020-05-19-testpost.md
+++ b/_posts/2020-05-19-testpost.md
@@ -1,7 +1,7 @@
 ---
 author: Lars
 title: Test Post with R Markdown
-excerpt: ""
+excerpt: "This is a simple example post using R Markdown."
 categories:  # Pleaser choose from [news,presentations,articles,projects,reports]
 tags:
   - Tutorial
