brute force fix link (absolute)

--- a/_posts/2022-05-04-news.md
+++ b/_posts/2022-05-04-news.md
@@ -19,10 +19,10 @@ related: false
 ---
 
 We have been rather busy ramping up out infrastructure and services. Our tech stack is now documented 
-in a seperate [projects page](/projects/infrastructure). 
+in a seperate [projects page](https://www.zidatasciencelab.de/projects/infrastructure/). 
 
 Currently our team is focussing on 3 main projects in addition to our usual Health Care Research Projects:
 
-1. [kvappradar.de](({{ site.baseurl }}{% link projects/kvappradar %}))
-2. [SmED Analytics and Reporting](({{ site.baseurl }}{% link projects/smed %}))
-3. [Machine Learning with EHR](({{ site.baseurl }}{% link projects/ehrml %}))
+1. [kvappradar.de](https://www.zidatasciencelab.de/projects/kvappradar/)
+2. [SmED Analytics and Reporting](https://www.zidatasciencelab.de/projects/smed/)
+3. [Machine Learning with EHR](https://www.zidatasciencelab.de/projects/ehrml/)
